feat: Implement internationalization, add admin settings and enhanced user management, and remove user profile functionality.

--- a/lang/en.json
+++ b/lang/en.json
@@ -15,6 +15,17 @@
   "Permissions & Status": "Permissions & Status",
   "Active Account": "Active Account",
   "Allow this user to log in and access the platform.": "Allow this user to log in and access the platform.",
+  "Enterprise Analytics": "Enterprise Analytics",
+  "Welcome back, :name": "Welcome back, :name",
+  "Visualize global performance, export price tables and stay up to date with the latest market data.": "Visualize global performance, export price tables and stay up to date with the latest market data.",
+  "Manage your organization's users, roles and platform access.": "Manage your organization's users, roles and platform access.",
+  "Dashboard Overview": "Dashboard Overview",
+  "Overview": "Overview",
+  "Report": "Report",
+  "Access Panel": "Access Panel",
+  "Click to view full details and analysis of this report.": "Click to view full details and analysis of this report.",
+  "Processing Data": "Processing Data",
+  "Synchronizing Analytics": "Synchronizing Analytics",
   "Account Information": "Account Information",
   "Security": "Security",
   "Create a new user or master admin to manage the platform.": "Create a new user or master admin to manage the platform.",
