--- a/lang/es.json
+++ b/lang/es.json
@@ -10,6 +10,17 @@
   "Active": "Activo",
   "Inactive": "Inactivo",
   "Actions": "Acciones",
+  "Enterprise Analytics": "Enterprise Analytics",
+  "Welcome back, :name": "Bienvenido, :name",
+  "Visualize global performance, export price tables and stay up to date with the latest market data.": "Visualice el desempeño global, exporte tablas de precios e infórmese sobre los datos de mercado más recientes.",
+  "Manage your organization's users, roles and platform access.": "Gestione los usuarios de su organización, los roles y el acceso a la plataforma.",
+  "Dashboard Overview": "Vista General del Panel",
+  "Overview": "Visión General",
+  "Report": "Informe",
+  "Access Panel": "Acceder al Panel",
+  "Click to view full details and analysis of this report.": "Haga clic para ver todos os detalles y análisis de este informe.",
+  "Processing Data": "Procesando Datos",
+  "Synchronizing Analytics": "Sincronizando Analytics",
   "Save Changes": "Guardar Cambios",
   "Leave blank to keep current": "Dejar en blanco para mantener la actual",
   "Permissions & Status": "Permisos y Estado",
