--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -8,76 +8,76 @@
   "Update user details and permissions.": "Atualizar detalhes e permissões do usuário.",
   "Criado em": "Criado em",
   "Atualizado em": "Atualizado em",
-  "Status": "Estado",
+  "Status": "Status",
   "Active": "Ativo",
   "Inactive": "Inativo",
   "Actions": "Ações",
-  "Save Changes": "Guardar Alterações",
-  "Leave blank to keep current": "Deixar em branco para manter a atual",
-  "Permissions & Status": "Permissões e Estado",
+  "Save Changes": "Salvar Alterações",
+  "Leave blank to keep current": "Deixe em branco para manter a atual",
+  "Permissions & Status": "Permissões e Status",
   "Active Account": "Conta Ativa",
-  "Allow this user to log in and access the platform.": "Permitir que este utilizador entre e aceda à plataforma.",
+  "Allow this user to log in and access the platform.": "Permitir que este usuário entre e acesse a plataforma.",
   "Account Information": "Informação da Conta",
   "Security": "Segurança",
-  "Create a new user or master admin to manage the platform.": "Criar um novo utilizador ou administrador mestre para gerir a plataforma.",
+  "Create a new user or master admin to manage the platform.": "Criar um novo usuário ou administrador mestre para gerir a plataforma.",
   "Permissions": "Permissões",
   "Role & Organization": "Função e Organização",
   "Grant Master Privileges": "Conceder Privilégios de Mestre",
-  "Grants full administrative access to all system settings and users.": "Concede acesso administrativo total a todas as configurações do sistema e utilizadores.",
-  "Advanced Settings": "Definições Avançadas",
-  "Assign this user to a specific tenant organization.": "Atribuir este utilizador a uma organização específica.",
+  "Grants full administrative access to all system settings and users.": "Concede acesso administrativo total a todas as configurações do sistema e usuários.",
+  "Advanced Settings": "Configurações Avançadas",
+  "Assign this user to a specific tenant organization.": "Atribuir este usuário a uma organização específica.",
   "Grants full administrative access to all system settings.": "Concede acesso administrativo total a todas as configurações do sistema.",
   "Cancel": "Cancelar",
-  "Users": "Utilizadores",
-  "Settings": "Definições",
-  "Users Management": "Gestão de Utilizadores",
-  "Manage users and their permissions.": "Gerir utilizadores e as suas permissões.",
+  "Users": "Usuários",
+  "Settings": "Configurações",
+  "Users Management": "Gestão de Usuários",
+  "Manage users and their permissions.": "Gerenciar usuários e suas permissões.",
   "Name": "Nome",
   "Email": "Email",
   "Role": "Função",
-  "Tenant ID": "ID do Cliente",
+  "Tenant ID": "ID da Organização",
   "Master": "Mestre",
-  "User": "Utilizador",
-  "Add New User": "Adicionar Novo Utilizador",
-  "Create a new user or master admin.": "Criar um novo utilizador ou administrador mestre.",
-  "Tenant ID (Optional)": "ID do Cliente (Opcional)",
+  "User": "Usuário",
+  "Add New User": "Adicionar Novo Usuário",
+  "Create a new user or master admin.": "Criar um novo usuário ou administrador mestre.",
+  "Tenant ID (Optional)": "ID da Organização (Opcional)",
   "Is Master Admin?": "É Administrador Mestre?",
-  "Create User": "Criar Utilizador",
+  "Create User": "Criar Usuário",
   "Created.": "Criado.",
   "Welcome back": "Bem-vindo de volta",
-  "Please enter your details to sign in.": "Por favor, insira os seus dados para entrar.",
+  "Please enter your details to sign in.": "Por favor, insira seus dados para entrar.",
   "Email address": "Endereço de email",
-  "Password": "Palavra-passe",
+  "Password": "Senha",
   "Remember me": "Lembrar-me",
-  "Forgot password?": "Esqueceu-se da palavra-passe?",
+  "Forgot password?": "Esqueceu a senha?",
   "Sign in": "Entrar",
   "Don't have an account?": "Não tem uma conta?",
-  "Sign up": "Registar",
+  "Sign up": "Cadastrar",
   "Create an account": "Criar uma conta",
-  "Get started with your free account today.": "Comece hoje com a sua conta gratuita.",
+  "Get started with your free account today.": "Comece hoje com sua conta gratuita.",
   "Full Name": "Nome Completo",
-  "Confirm Password": "Confirmar Palavra-passe",
+  "Confirm Password": "Confirmar Senha",
   "Create account": "Criar conta",
   "Already have an account?": "Já tem uma conta?",
-  "Reset your password": "Redefinir a sua palavra-passe",
-  "Enter your email address and we will send you a password reset link.": "Insira o seu endereço de email e enviaremos um link de redefinição de palavra-passe.",
+  "Reset your password": "Redefinir sua senha",
+  "Enter your email address and we will send you a password reset link.": "Insira seu endereço de email e enviaremos um link de redefinição de senha.",
   "Email Password Reset Link": "Enviar Link de Redefinição",
   "Back to sign in": "Voltar ao início de sessão",
-  "Reset password": "Redefinir palavra-passe",
-  "Create a new password for your account.": "Crie uma nova palavra-passe para a sua conta.",
-  "New Password": "Nova Palavra-passe",
-  "Confirm New Password": "Confirmar Nova Palavra-passe",
+  "Reset password": "Redefinir senha",
+  "Create a new password for your account.": "Crie uma nova senha para sua conta.",
+  "New Password": "Nova Senha",
+  "Confirm New Password": "Confirmar Nova Senha",
   "Confirm": "Confirmar",
-  "This is a secure area. Please confirm your password.": "Esta é uma área segura. Por favor, confirme a sua palavra-passe.",
+  "This is a secure area. Please confirm your password.": "Esta é uma área segura. Por favor, confirme sua senha.",
   "Verify email": "Verificar email",
-  "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you?": "Obrigado por se registar! Antes de começar, poderia verificar o seu endereço de email clicando no link que acabámos de enviar?",
-  "A new verification link has been sent to the email address you provided during registration.": "Um novo link de verificação foi enviado para o endereço de email fornecido durante o registo.",
+  "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you?": "Obrigado por se cadastrar! Antes de começar, por favor verifique seu endereço de email clicando no link que acabamos de enviar.",
+  "A new verification link has been sent to the email address you provided during registration.": "Um novo link de verificação foi enviado para o endereço de email fornecido durante o cadastro.",
   "Resend Verification Email": "Reenviar Email de Verificação",
   "Log Out": "Sair",
   "Market Intelligence": "Inteligência de Mercado",
   "Global Pepper Trade": "Comércio Global de Pimenta",
   "Reimagined.": "Reimaginado.",
-  "Access real-time pricing, supply chain analytics, and predictive insights for the global spice market.": "Aceda a preços em tempo real, análises da cadeia de abastecimento e insights preditivos para o mercado global de especiarias.",
+  "Access real-time pricing, supply chain analytics, and predictive insights for the global spice market.": "Acesse preços em tempo real, análises da cadeia de suprimentos e insights preditivos para o mercado global de especiarias.",
   "PRICE HISTORY": "HISTÓRICO DE PREÇOS",
   "HEADLINE_PART_1": "HISTÓRICO",
   "HEADLINE_PART_2": "DE PREÇOS",
@@ -85,7 +85,7 @@
   "PRIVACY": "PRIVACIDADE",
   "TERMS": "TERMOS",
   "Recover access": "Recuperar acesso",
-  "Forgot password help text": "Esqueceu a sua palavra-passe? Sem problema. Insira o seu endereço de email e enviaremos um link de redefinição.",
+  "Forgot password help text": "Esqueceu sua senha? Sem problemas. Insira seu endereço de email e enviaremos um link de redefinição.",
   "CONTACT": "CONTATO",
   "PRICE_TABLE_EXPORT": "TABELA DE PREÇOS",
   "Your account has been created, but requires manual activation by an administrator.": "Sua conta foi criada, mas requer ativação manual por um administrador.",
@@ -97,7 +97,7 @@
   "Dashboard Overview": "Visão Geral do Painel",
   "Overview": "Visão Geral",
   "Report": "Relatório",
-  "Access Panel": "Aceder ao Painel",
+  "Access Panel": "Acessar Painel",
   "Click to view full details and analysis of this report.": "Clique para visualizar os detalhes completos e análises deste relatório.",
   "Processing Data": "Processando Dados",
   "Synchronizing Analytics": "Sincronizando Analytics"
