feat: Implement user profile management, enhance admin settings for user activation and default pages, and update internationalization.

--- a/lang/en.json
+++ b/lang/en.json
@@ -10,6 +10,7 @@
   "Active": "Active",
   "Inactive": "Inactive",
   "Actions": "Actions",
+  "Copyright • 2026 All rights reserved": "Copyright • 2026 All rights reserved",
   "Save Changes": "Save Changes",
   "Leave blank to keep current": "Leave blank to keep current",
   "Permissions & Status": "Permissions & Status",
@@ -17,7 +18,6 @@
   "Allow this user to log in and access the platform.": "Allow this user to log in and access the platform.",
   "Enterprise Analytics": "Enterprise Analytics",
   "Welcome back, :name": "Welcome back, :name",
-  "Visualize global performance, export price tables and stay up to date with the latest market data.": "Visualize global performance, export price tables and stay up to date with the latest market data.",
   "Manage your organization's users, roles and platform access.": "Manage your organization's users, roles and platform access.",
   "Dashboard Overview": "Dashboard Overview",
   "Overview": "Overview",
