--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -12,6 +12,7 @@
   "Active": "Ativo",
   "Inactive": "Inativo",
   "Actions": "Ações",
+  "Copyright • 2026 All rights reserved": "© Copyright • 2026 Todos os direitos reservados",
   "Save Changes": "Salvar Alterações",
   "Leave blank to keep current": "Deixe em branco para manter a atual",
   "Permissions & Status": "Permissões e Status",
@@ -88,11 +89,10 @@
   "Forgot password help text": "Esqueceu sua senha? Sem problemas. Insira seu endereço de email e enviaremos um link de redefinição.",
   "CONTACT": "CONTATO",
   "PRICE_TABLE_EXPORT": "TABELA DE PREÇOS",
-  "Your account has been created, but requires manual activation by an administrator.": "Sua conta foi criada, mas requer ativação manual por um administrador.",
+  "Registration successful! Your account is now pending administrator approval. You will receive access shortly.": "Cadastro realizado com sucesso! Sua conta está em fase de ativação e, em breve, um administrador liberará seu acesso.",
   "These credentials do not match our records.": "Essas credenciais não correspondem aos nossos registros.",
   "Enterprise Analytics": "Enterprise Analytics",
   "Welcome back, :name": "Olá, :name",
-  "Visualize global performance, export price tables and stay up to date with the latest market data.": "Visualize o desempenho global, exporte tabelas de preços e mantenha-se atualizado com os dados mais recentes do mercado.",
   "Manage your organization's users, roles and platform access.": "Gerencie os usuários, funções e acessos à plataforma da sua organização.",
   "Dashboard Overview": "Visão Geral do Painel",
   "Overview": "Visão Geral",
@@ -100,5 +100,46 @@
   "Access Panel": "Acessar Painel",
   "Click to view full details and analysis of this report.": "Clique para visualizar os detalhes completos e análises deste relatório.",
   "Processing Data": "Processando Dados",
-  "Synchronizing Analytics": "Sincronizando Analytics"
+  "Synchronizing Analytics": "Sincronizando Analytics",
+  "Settings updated successfully.": "Configurações atualizadas com sucesso.",
+  "User created successfully.": "Usuário criado com sucesso.",
+  "User updated successfully.": "Usuário atualizado com sucesso.",
+  "User deleted successfully.": "Usuário excluído com sucesso.",
+  "Security & Access": "Segurança e Acesso",
+  "Global user registration settings.": "Configurações globais de registro de usuários.",
+  "Require Manual Activation": "Requerer Ativação Manual",
+  "When enabled, new registered users will need manual approval by a master admin before being able to log in.": "Quando ativado, novos usuários registrados precisarão ser aprovados manualmente por um administrador master antes de conseguirem fazer login.",
+  "Default Pages": "Páginas Padrão",
+  "Define which reports new users will see by default.": "Defina quais relatórios novos usuários poderão ver por padrão.",
+  "Back to List": "Voltar para Lista",
+  "Basic profile data": "Dados básicos do perfil",
+  "Access credentials": "Credenciais de acesso",
+  "Access levels and reports": "Níveis de acesso e relatórios",
+  "REQUIRED TO SELECT ONE": "OBRIGATÓRIO SELECIONAR UM",
+  "SELECTED": "SELECIONADOS",
+  "Full Access Enabled": "Acesso Total Habilitado",
+  "As a Master Administrator, this user will have automatic access to all current and future reports in the system.": "Como Administrador Mestre, este usuário terá acesso automático a todos os relatórios presentes e futuros do sistema.",
+  "Change password (optional)": "Alterar senha (opcional)",
+  "Access levels and account status": "Níveis de acesso e estado da conta",
+  "Created at": "Criado em",
+  "No users found": "Nenhum usuário encontrado",
+  "Try adjusting your search or clearing the filters.": "Tente ajustar sua busca ou limpar os filtros.",
+  "Are you sure you want to delete this user? This action cannot be undone.": "Tem certeza que deseja excluir este usuário? Esta ação não poderá ser desfeita.",
+  "Delete": "Excluir",
+  "Search by name or email...": "Buscar por nome ou email...",
+  "Permission Settings": "Configuração de Permissões",
+  "Activate All Listed": "Ativar Todos os Listados",
+  "My Profile": "Meu Perfil",
+  "Profile Information": "Informações do Perfil",
+  "Update your account's profile information and email address.": "Atualize as informações de perfil e o endereço de e-mail da sua conta.",
+  "Your email address is unverified.": "Seu endereço de e-mail não foi verificado.",
+  "Click here to re-send the verification email.": "Clique aqui para reenviar o e-mail de verificação.",
+  "A new verification link has been sent to your email address.": "Um novo link de verificação foi enviado para o seu endereço de e-mail.",
+  "Update Password": "Atualizar Senha",
+  "Ensure your account is using a long, random password to stay secure.": "Certifique-se de que sua conta esteja usando uma senha longa e aleatória para manter a segurança.",
+  "Current Password": "Senha Atual",
+  "Manage your personal settings and security preferences.": "Gerencie suas configurações pessoais e preferências de segurança.",
+  "Basic Info": "Informações Básicas",
+  "Profile updated successfully.": "Perfil atualizado com sucesso.",
+  "Password updated successfully.": "Senha atualizada com sucesso."
 }
