--- a/lang/es.json
+++ b/lang/es.json
@@ -10,21 +10,12 @@
   "Active": "Activo",
   "Inactive": "Inactivo",
   "Actions": "Acciones",
-  "Enterprise Analytics": "Enterprise Analytics",
+  "Copyright • 2026 All rights reserved": "© Copyright • 2026 Todos os derechos reservados",
   "Welcome back, :name": "Bienvenido, :name",
-  "Visualize global performance, export price tables and stay up to date with the latest market data.": "Visualice el desempeño global, exporte tablas de precios e infórmese sobre los datos de mercado más recientes.",
-  "Manage your organization's users, roles and platform access.": "Gestione los usuarios de su organización, los roles y el acceso a la plataforma.",
-  "Dashboard Overview": "Vista General del Panel",
-  "Overview": "Visión General",
-  "Report": "Informe",
-  "Access Panel": "Acceder al Panel",
-  "Click to view full details and analysis of this report.": "Haga clic para ver todos os detalles y análisis de este informe.",
-  "Processing Data": "Procesando Datos",
-  "Synchronizing Analytics": "Sincronizando Analytics",
   "Save Changes": "Guardar Cambios",
   "Leave blank to keep current": "Dejar en blanco para mantener la actual",
   "Permissions & Status": "Permisos y Estado",
-  "Active Account": "Cuenta Activa",
+  "Active Account": "Cuenta Ativa",
   "Allow this user to log in and access the platform.": "Permitir que este usuario inicie sesión y acceda a la plataforma.",
   "Account Information": "Información de la Cuenta",
   "Security": "Seguridad",
@@ -96,5 +87,57 @@
   "Recover access": "Recuperar acceso",
   "Forgot password help text": "¿Olvidaste tu contraseña? No hay problema. Simplemente dinos tu dirección de correo electrónico y te enviaremos un enlace para restablecer la contraseña.",
   "CONTACT": "CONTACTO",
-  "PRICE_TABLE_EXPORT": "TABLA DE PRECIOS"
+  "PRICE_TABLE_EXPORT": "TABELA DE PREÇOS",
+  "Registration successful! Your account is now pending administrator approval. You will receive access shortly.": "¡Registro completado con éxito! Su cuenta está en fase de activación y, en breve, un administrador le dará acceso.",
+  "These credentials do not match our records.": "Essas credenciais não correspondem aos nossos registros.",
+  "Enterprise Analytics": "Enterprise Analytics",
+  "Manage your organization's users, roles and platform access.": "Gerencie os usuários de sua organização, os roles y el acceso a la plataforma.",
+  "Dashboard Overview": "Vista General del Panel",
+  "Overview": "Visión General",
+  "Report": "Informe",
+  "Access Panel": "Acceder al Panel",
+  "Click to view full details and analysis of this report.": "Haga clic para ver todos os detalles y análisis de este informe.",
+  "Processing Data": "Procesando Datos",
+  "Synchronizing Analytics": "Sincronizando Analytics",
+  "Settings updated successfully.": "Configuraciones actualizadas con éxito.",
+  "User created successfully.": "Usuario creado con éxito.",
+  "User updated successfully.": "Usuario actualizado con éxito.",
+  "User deleted successfully.": "Usuario eliminado con éxito.",
+  "Security & Access": "Seguridad y Acceso",
+  "Global user registration settings.": "Configuración global de registro de usuarios.",
+  "Require Manual Activation": "Requerir Activación Manual",
+  "When enabled, new registered users will need manual approval by a master admin before being able to log in.": "Cuando está habilitado, los nuevos usuarios registrados necesitarán aprobación manual por parte de un administrador maestro antes de poder iniciar sesión.",
+  "Default Pages": "Páginas Predeterminadas",
+  "Define which reports new users will see by default.": "Define qué informes verán los nuevos usuarios de forma predeterminada.",
+  "Back to List": "Volver a la Lista",
+  "Basic profile data": "Datos básicos del perfil",
+  "Access credentials": "Credenciales de acceso",
+  "Access levels and reports": "Nivel de acceso e informes",
+  "REQUIRED TO SELECT ONE": "OBLIGATORIO SELECIONAR UNO",
+  "SELECTED": "SELECCIONADOS",
+  "Full Access Enabled": "Acceso Total Habilitado",
+  "As a Master Administrator, this user will have automatic access to all current and future reports in the system.": "Como Administrador Maestro, este usuario tendrá acceso automático a todos los informes actuales y futuros del sistema.",
+  "Change password (optional)": "Cambiar contraseña (opcional)",
+  "Access levels and account status": "Nivel de acceso y estado de la cuenta",
+  "Created at": "Creado el",
+  "No users found": "No se encontraron usuarios",
+  "Try adjusting your search or clearing the filters.": "Intente ajustar su búsqueda o limpiar los filtros.",
+  "Are you sure you want to delete this user? This action cannot be undone.": "¿Está seguro de que desea eliminar a este usuario? Esta acción no se puede deshacer.",
+  "Delete": "Eliminar",
+  "Search by name or email...": "Buscar por nombre o email...",
+  "Permission Settings": "Configuración de Permisos",
+  "Activate All Listed": "Activar Todos los Listados",
+  "My Profile": "Mi Perfil",
+  "Profile Information": "Información del Perfil",
+  "Update your account's profile information and email address.": "Actualice la información de perfil y la dirección de correo electrónico de su cuenta.",
+  "Your email address is unverified.": "Su dirección de correo electrónico no ha sido verificada.",
+  "Click here to re-send the verification email.": "Haga clic aquí para volver a enviar el correo electrónico de verificación.",
+  "A new verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su dirección de correo electrónico.",
+  "Update Password": "Actualizar Contraseña",
+  "Ensure your account is using a long, random password to stay secure.": "Asegúrese de que su cuenta utilice una contraseña larga y aleatoria para mantenerse seguro.",
+  "Current Password": "Contraseña Actual",
+  "Manage your personal settings and security preferences.": "Gestione su configuración personal y preferencias de seguridad.",
+  "Basic Info": "Información Básica",
+  "Profile updated successfully.": "Perfil actualizado con éxito.",
+  "Password updated successfully.": "Contraseña actualizada con éxito."
 }
