--- a/lang/pt_PT.json
+++ b/lang/pt_PT.json
@@ -12,6 +12,7 @@
   "Active": "Ativo",
   "Inactive": "Inativo",
   "Actions": "Ações",
+  "Copyright • 2026 All rights reserved": "© Copyright • 2026 Todos os direitos reservados",
   "Save Changes": "Guardar Alterações",
   "Leave blank to keep current": "Deixar em branco para manter a atual",
   "Permissions & Status": "Permissões e Estado",
@@ -30,7 +31,7 @@
   "Cancel": "Cancelar",
   "Users": "Utilizadores",
   "Settings": "Definições",
-  "Users Management": "Gestão de Utilizadores",
+  "Users Management": "Gestão de Usuários",
   "Manage users and their permissions.": "Gerir utilizadores e as suas permissões.",
   "Name": "Nome",
   "Email": "Email",
@@ -88,11 +89,10 @@
   "Forgot password help text": "Esqueceu a sua palavra-passe? Sem problema. Insira o seu endereço de email e enviaremos um link de redefinição.",
   "CONTACT": "CONTATO",
   "PRICE_TABLE_EXPORT": "TABELA DE PREÇOS",
-  "Your account has been created, but requires manual activation by an administrator.": "Sua conta foi criada, mas requer ativação manual por um administrador.",
+  "Registration successful! Your account is now pending administrator approval. You will receive access shortly.": "Registo efetuado com sucesso! A sua conta está em fase de ativação e, em breve, um administrador libertará o seu acesso.",
   "These credentials do not match our records.": "Essas credenciais não correspondem aos nossos registros.",
   "Enterprise Analytics": "Enterprise Analytics",
   "Welcome back, :name": "Olá, :name",
-  "Visualize global performance, export price tables and stay up to date with the latest market data.": "Visualize o desempenho global, exporte tabelas de preços e mantenha-se atualizado com os dados mais recentes do mercado.",
   "Manage your organization's users, roles and platform access.": "Gerencie os usuários, funções e acessos à plataforma da sua organização.",
   "Dashboard Overview": "Visão Geral do Painel",
   "Overview": "Visão Geral",
@@ -100,5 +100,46 @@
   "Access Panel": "Aceder ao Painel",
   "Click to view full details and analysis of this report.": "Clique para visualizar os detalhes completos e análises deste relatório.",
   "Processing Data": "Processando Dados",
-  "Synchronizing Analytics": "Sincronizando Analytics"
+  "Synchronizing Analytics": "Sincronizando Analytics",
+  "Settings updated successfully.": "Definições atualizadas com sucesso.",
+  "User created successfully.": "Utilizador criado com sucesso.",
+  "User updated successfully.": "Utilizador atualizado com sucesso.",
+  "User deleted successfully.": "Utilizador apagado com sucesso.",
+  "Security & Access": "Segurança e Acessos",
+  "Global user registration settings.": "Definições globais de registo de utilizadores.",
+  "Require Manual Activation": "Requerer Ativação Manual",
+  "When enabled, new registered users will need manual approval by a master admin before being able to log in.": "Quando ativado, novos utilizadores registados precisarão de ser aprovados manualmente por um administrador mestre antes de conseguirem iniciar sessão.",
+  "Default Pages": "Páginas Padrão",
+  "Define which reports new users will see by default.": "Defina quais os relatórios que os novos utilizadores poderão ver por predefinição.",
+  "Back to List": "Voltar para a Lista",
+  "Basic profile data": "Dados básicos do perfil",
+  "Access credentials": "Credenciais de acesso",
+  "Access levels and reports": "Níveis de acesso e relatórios",
+  "REQUIRED TO SELECT ONE": "OBRIGATÓRIO SELECIONAR UM",
+  "SELECTED": "SELECIONADOS",
+  "Full Access Enabled": "Acesso Total Ativado",
+  "As a Master Administrator, this user will have automatic access to all current and future reports in the system.": "Como Administrador Mestre, este utilizador terá acesso automático a todos os relatórios presentes e futuros do sistema.",
+  "Change password (optional)": "Alterar palavra-passe (opcional)",
+  "Access levels and account status": "Níveis de acesso e estado da conta",
+  "Created at": "Criado em",
+  "No users found": "Nenhum utilizador encontrado",
+  "Try adjusting your search or clearing the filters.": "Tente ajustar a sua pesquisa ou limpar os filtros.",
+  "Are you sure you want to delete this user? This action cannot be undone.": "Tem a certeza que deseja apagar este utilizador? Esta ação não pode ser revertida.",
+  "Delete": "Apagar",
+  "Search by name or email...": "Procurar por nome ou email...",
+  "Permission Settings": "Definições de Permissões",
+  "Activate All Listed": "Ativar Todos os Listados",
+  "My Profile": "O Meu Perfil",
+  "Profile Information": "Informações do Perfil",
+  "Update your account's profile information and email address.": "Atualize as informações de perfil e o endereço de e-mail da sua conta.",
+  "Your email address is unverified.": "O seu endereço de e-mail não foi verificado.",
+  "Click here to re-send the verification email.": "Clique aqui para reenviar o e-mail de verificação.",
+  "A new verification link has been sent to your email address.": "Um novo link de verificação foi enviado para o seu endereço de e-mail.",
+  "Update Password": "Atualizar Palavra-passe",
+  "Ensure your account is using a long, random password to stay secure.": "Certifique-se de que a sua conta está a utilizar uma palavra-passe longa e aleatória para manter a segurança.",
+  "Current Password": "Palavra-passe Atual",
+  "Manage your personal settings and security preferences.": "Gerencie as suas definições pessoais e preferências de segurança.",
+  "Basic Info": "Informações Básicas",
+  "Profile updated successfully.": "Perfil atualizado com sucesso.",
+  "Password updated successfully.": "Palavra-passe atualizada com sucesso."
 }
