feat: Implement email notification settings, queue heartbeat monitoring, and update email templates

--- a/lang/es.json
+++ b/lang/es.json
@@ -30,6 +30,7 @@
   "Cancel": "Cancelar",
   "Users": "Usuarios",
   "Settings": "Configuración",
+  "Dashboard": "Dashboard",
   "Users Management": "Gestión de Usuarios",
   "Manage users and their permissions.": "Administrar usuarios y sus permisos.",
   "Name": "Nombre",
@@ -149,5 +150,23 @@
   "You cannot delete yourself.": "No puedes eliminarte a ti mismo.",
   "No Access to Reports": "Sin acceso a los informes",
   "You currently do not have any reports assigned to your account. Our administration team will configure your permissions shortly. Please check back soon.": "Actualmente no tienes ningún informe asignado a tu cuenta. Nuestro equipo de administración configurará tus permisos en breve. Por favor, vuelve pronto.",
-  "Awaiting Approval": "Esperando aprobación"
+  "Awaiting Approval": "Esperando aprobación",
+  "Refresh Report": "Recargar Informe",
+  "System Online": "Sistema En Línea",
+  "System Offline": "Sistema Fuera de Línea",
+  "Service Connection": "Conexión de Serviço",
+  "Service Unavailable": "Servicio No Disponible",
+  "Communication": "Comunicación",
+  "Notify Users of Update": "Notificar Usuarios de Atualización",
+  "Send an email alert to selected users": "Enviar una alerta por correo electrónico a los usuarios seleccionados",
+  "Send Notification": "Enviar Notificación",
+  "Notifications sent successfully.": "Notificaciones enviadas con éxito.",
+  "Reports Updated": "Informes Atualizados",
+  "Reports Updated - :name": "Informes Atualizados - :name",
+  "We are writing to inform you that our Power BI dashboards have been updated with the latest data.": "Le escribimos para informarle que nuestros paneles de Power BI se han actualizado con los datos más recientes.",
+  "Update Date": "Fecha de Actualización",
+  "Update Time": "Hora de Actualización",
+  "Access Dashboard": "Acceder al Panel",
+  "Deselect All": "Desmarcar Todos",
+  "No users matched your search": "Ningún usuario coincide con su búsqueda"
 }
