--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -31,6 +31,7 @@
   "Cancel": "Cancelar",
   "Users": "Usuários",
   "Settings": "Configurações",
+  "Dashboard": "Dashboard",
   "Users Management": "Gestão de Usuários",
   "Manage users and their permissions.": "Gerenciar usuários e suas permissões.",
   "Name": "Nome",
@@ -151,5 +152,67 @@
   "You cannot delete yourself.": "Você não pode excluir a si mesmo.",
   "No Access to Reports": "Sem acesso aos relatórios",
   "You currently do not have any reports assigned to your account. Our administration team will configure your permissions shortly. Please check back soon.": "Atualmente você não possui relatórios atribuídos à sua conta. Nossa equipe de administração configurará suas permissões em breve. Por favor, volte mais tarde.",
-  "Awaiting Approval": "Aguardando Aprovação"
+  "Awaiting Approval": "Aguardando Aprovação",
+  "Refresh Report": "Recarregar Relatório",
+  "System Online": "Sistema Online",
+  "System Offline": "Sistema Offline",
+  "Service Connection": "Conexão de Serviço",
+  "Service Unavailable": "Serviço Indisponível",
+  "Communication": "Comunicação",
+  "Notify Users of Update": "Notificar Usuários de Atualização",
+  "Send an email alert to selected users": "Enviar um alerta por e-mail para usuários selecionados",
+  "Send Notification": "Enviar Notificação",
+  "Notifications sent successfully.": "Notificações enviadas com sucesso.",
+  "Reports Updated": "Relatórios Atualizados",
+  "Reports Updated - :name": "Relatórios Atualizados - :name",
+  "We are writing to inform you that our Power BI dashboards have been updated with the latest data.": "Estamos escrevendo para informar que nossos dashboards do Power BI foram atualizados com os dados mais recentes.",
+  "Update Date": "Data da Atualização",
+  "Update Time": "Hora da Atualização",
+  "Access Dashboard": "Acessar Dashboard",
+  "Deselect All": "Desmarcar Todos",
+  "No users matched your search": "Nenhum usuário corresponde à sua busca",
+  "Mail Server": "Servidor de E-mail",
+  "Email Customization": "Customização de E-mail",
+  "SMTP Configuration": "Configuração SMTP",
+  "Manage outgoing email server settings": "Gerenciar configurações do servidor de saída",
+  "SMTP Host": "Host SMTP",
+  "Port": "Porta",
+  "Encryption": "Criptografia",
+  "None": "Nenhuma",
+  "SMTP Username": "Usuário SMTP",
+  "SMTP Password": "Senha SMTP",
+  "From Address": "E-mail do Remetente",
+  "From Name": "Nome do Remetente",
+  "Save SMTP Settings": "Salvar Configurações SMTP",
+  "Email Template Customization": "Personalização do Template de E-mail",
+  "Change how update notifications look": "Mude a aparência das notificações de atualização",
+  "Email Subject / Title": "Assunto / Título do E-mail",
+  "Introduction Text": "Texto de Introdução",
+  "Button Text": "Texto do Botão",
+  "Short Footer (Optional)": "Rodapé Curto (Opcional)",
+  "Live Content Preview": "Visualização em Tempo Real",
+  "Informative introduction text here...": "Texto informativo de introdução aqui...",
+  "Save Email Content": "Salvar Conteúdo do E-mail",
+  "Test Connection": "Testar Conexão",
+  "Test email sent successfully to :email": "E-mail de teste enviado com sucesso para :email",
+  "Failed to send test email: ": "Falha ao enviar e-mail de teste: ",
+  "Email Queue Status": "Status da Fila de E-mail",
+  "System Active & Running": "Sistema Ativo e Operante",
+  "Service Offline or Starting...": "Serviço Offline ou Iniciando...",
+  "Pending": "Pendente",
+  "Failed": "Falha",
+  "Refresh Status": "Atualizar Status",
+  "Warning: The email delivery service is not detected. Please check if Docker containers are running.": "Aviso: O serviço de entrega de e-mail não foi detectado. Verifique se os containers Docker estão rodando.",
+  "Configure and manage system parameters": "Configure e gerencie os parâmetros do sistema",
+  "Infrastructure": "Infraestrutura",
+  "General": "Geral",
+  "Update Alerts": "Alertas de Atualização",
+  "SMTP Server": "Servidor SMTP",
+  "Security & Approval": "Segurança e Aprovação",
+  "Landing Pages": "Páginas de Destino",
+  "Hello": "Olá",
+  "You can now access the latest insights and analysis on your dashboard.": "Agora você pode acessar as últimas atualizações e análises em seu painel.",
+  "Regards": "Atenciosamente",
+  "Only Common Users": "Apenas Usuários Comuns",
+  "Master Admin": "Admin Mestre"
 }
