--- a/lang/pt_PT.json
+++ b/lang/pt_PT.json
@@ -31,6 +31,7 @@
   "Cancel": "Cancelar",
   "Users": "Utilizadores",
   "Settings": "Definições",
+  "Dashboard": "Dashboard",
   "Users Management": "Gestão de Usuários",
   "Manage users and their permissions.": "Gerir utilizadores e as suas permissões.",
   "Name": "Nome",
@@ -151,5 +152,23 @@
   "You cannot delete yourself.": "Não se pode apagar a si mesmo.",
   "No Access to Reports": "Sem acesso aos relatórios",
   "You currently do not have any reports assigned to your account. Our administration team will configure your permissions shortly. Please check back soon.": "Atualmente não possui relatórios atribuídos à sua conta. A nossa equipa de administração irá configurar as suas permissões em breve. Por favor, volte mais tarde.",
-  "Awaiting Approval": "Aguardando Aprovação"
+  "Awaiting Approval": "Aguardando Aprovação",
+  "Refresh Report": "Recarregar Relatório",
+  "System Online": "Sistema Online",
+  "System Offline": "Sistema Offline",
+  "Service Connection": "Ligação de Serviço",
+  "Service Unavailable": "Serviço Indisponível",
+  "Communication": "Comunicação",
+  "Notify Users of Update": "Notificar Utilizadores de Atualização",
+  "Send an email alert to selected users": "Enviar um alerta por e-mail para utilizadores selecionados",
+  "Send Notification": "Enviar Notificação",
+  "Notifications sent successfully.": "Notificações enviadas com sucesso.",
+  "Reports Updated": "Relatórios Atualizados",
+  "Reports Updated - :name": "Relatórios Atualizados - :name",
+  "We are writing to inform you that our Power BI dashboards have been updated with the latest data.": "Estamos a escrever para informar que os nossos dashboards do Power BI foram atualizados com os dados mais recentes.",
+  "Update Date": "Data da Atualização",
+  "Update Time": "Hora da Atualização",
+  "Access Dashboard": "Aceder ao Dashboard",
+  "Deselect All": "Desmarcar Todos",
+  "No users matched your search": "Nenhum utilizador corresponde à sua pesquisa"
 }
