feat: Introduce user phone and company fields, rich text editor, and legal content management features.

--- a/lang/en.json
+++ b/lang/en.json
@@ -4,6 +4,11 @@
   "Master administrators have access to all reports automatically.": "Master administrators have access to all reports automatically.",
   "name@company.com": "name@company.com",
   "John Doe": "John Doe",
+  "Phone": "Phone",
+  "Company Name": "Company Name",
+  "Company": "Company",
+  "+55 11 99999-9999": "+55 11 99999-9999",
+  "Company Ltd.": "Company Ltd.",
   "Edit User": "Edit User",
   "Update user details and permissions.": "Update user details and permissions.",
   "Status": "Status",
@@ -37,6 +42,9 @@
   "Assign this user to a specific tenant organization.": "Assign this user to a specific tenant organization.",
   "Grants full administrative access to all system settings.": "Grants full administrative access to all system settings.",
   "Cancel": "Cancel",
+  "Confirm": "Confirm",
+  "Delete": "Delete",
+  "Clear": "Clear",
   "Users": "Users",
   "Settings": "Settings",
   "Users Management": "Users Management",
@@ -57,6 +65,10 @@
   "Please enter your details to sign in.": "Please enter your details to sign in.",
   "Email address": "Email address",
   "Password": "Password",
+  "Password updated successfully.": "Password updated successfully.",
+  "Password updated successfully. Please log in again.": "Password updated successfully. Please log in again.",
+  "Clear Activities": "Clear Activities",
+  "Activities cleared successfully.": "Activities cleared successfully.",
   "Remember me": "Remember me",
   "Forgot password?": "Forgot password?",
   "Sign in": "Sign in",
@@ -76,7 +88,6 @@
   "Create a new password for your account.": "Create a new password for your account.",
   "New Password": "New Password",
   "Confirm New Password": "Confirm New Password",
-  "Confirm": "Confirm",
   "This is a secure area. Please confirm your password.": "This is a secure area. Please confirm your password.",
   "Verify email": "Verify email",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you?": "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you?",
@@ -96,5 +107,17 @@
   "Recover access": "Recover access",
   "Forgot password help text": "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link.",
   "CONTACT": "CONTACT",
-  "PRICE_TABLE_EXPORT": "PRICE TABLE"
+  "PRICE_TABLE_EXPORT": "PRICE TABLE",
+  "Legal & Privacy": "Legal & Privacy",
+  "Manage platform policies and conditions": "Manage platform policies and conditions",
+  "Privacy Policy": "Privacy Policy",
+  "Terms of Use": "Terms of Use",
+  "Enter the privacy policy content here...": "Enter the privacy policy content here...",
+  "Enter the terms of use content here...": "Enter the terms of use content here...",
+  "Save Legal Content": "Save Legal Content",
+  "Last updated: 2026": "Last updated: 2026",
+  "Our commitment to you": "Our commitment to you",
+  "Content not available": "Content not available",
+  "The administration team is currently updating this document.": "The administration team is currently updating this document.",
+  "Close window": "Close window"
 }
