--- a/lang/es.json
+++ b/lang/es.json
@@ -4,6 +4,11 @@
   "Master administrators have access to all reports automatically.": "Los administradores maestros tienen acceso a todos los informes automáticamente.",
   "name@company.com": "nombre@empresa.com",
   "John Doe": "Juan Pérez",
+  "Phone": "Teléfono",
+  "Company Name": "Nombre de la Empresa",
+  "Company": "Empresa",
+  "+55 11 99999-9999": "+55 11 99999-9999",
+  "Company Ltd.": "Empresa S.A.",
   "Edit User": "Editar Usuario",
   "Update user details and permissions.": "Actualizar detalles y permisos del usuario.",
   "Status": "Estado",
@@ -28,6 +33,9 @@
   "Assign this user to a specific tenant organization.": "Asignar este usuario a una organización específica.",
   "Grants full administrative access to all system settings.": "Otorga acceso administrativo total a todas las configuraciones del sistema.",
   "Cancel": "Cancelar",
+  "Confirm": "Confirmar",
+  "Clear": "Limpiar",
+  "Delete": "Eliminar",
   "Users": "Usuarios",
   "Settings": "Configuración",
   "Dashboard": "Dashboard",
@@ -68,7 +76,6 @@
   "Create a new password for your account.": "Crea una nueva contraseña para tu cuenta.",
   "New Password": "Nueva Contraseña",
   "Confirm New Password": "Confirmar Nueva Contraseña",
-  "Confirm": "Confirmar",
   "This is a secure area. Please confirm your password.": "Esta es un área segura. Por favor, confirme su contraseña.",
   "Verify email": "Verificar correo",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you?": "¡Gracias por registrarte! Antes de comenzar, ¿podrías verificar tu dirección de correo electrónico haciendo clic en el enlace que te acabamos de enviar?",
@@ -104,6 +111,9 @@
   "User created successfully.": "Usuario creado con éxito.",
   "User updated successfully.": "Usuario actualizado con éxito.",
   "User deleted successfully.": "Usuario eliminado con éxito.",
+  "Clear Activities": "Limpiar Actividades",
+  "Are you sure you want to clear all user activities? This will reset all engagement data for all users.": "¿Está seguro de que desea limpiar todas las actividades de los usuarios? Esto restablecerá todos los datos de participación.",
+  "Activities cleared successfully.": "Actividades limpiadas con éxito.",
   "Security & Access": "Seguridad y Acceso",
   "Global user registration settings.": "Configuración global de registro de usuarios.",
   "Require Manual Activation": "Requerir Activación Manual",
@@ -124,7 +134,6 @@
   "No users found": "No se encontraron usuarios",
   "Try adjusting your search or clearing the filters.": "Intente ajustar su búsqueda o limpiar los filtros.",
   "Are you sure you want to delete this user? This action cannot be undone.": "¿Está seguro de que desea eliminar a este usuario? Esta acción no se puede deshacer.",
-  "Delete": "Eliminar",
   "Search by name or email...": "Buscar por nombre o email...",
   "Permission Settings": "Configuración de Permisos",
   "Activate All Listed": "Activar Todos los Listados",
@@ -141,6 +150,7 @@
   "Basic Info": "Información Básica",
   "Profile updated successfully.": "Perfil actualizado con éxito.",
   "Password updated successfully.": "Contraseña actualizada con éxito.",
+  "Password updated successfully. Please log in again.": "Contraseña actualizada con éxito. Por favor, inicie sesión de nuevo.",
   "User status updated.": "Estado del usuario actualizado.",
   "Users updated successfully.": "Usuarios actualizados con éxito.",
   "You cannot remove your own master status or deactivate yourself.": "No puedes eliminar tu propio estado de maestro ni desactivarte a ti mismo.",
@@ -168,5 +178,17 @@
   "Update Time": "Hora de Actualización",
   "Access Dashboard": "Acceder al Panel",
   "Deselect All": "Desmarcar Todos",
-  "No users matched your search": "Ningún usuario coincide con su búsqueda"
+  "No users matched your search": "Ningún usuario coincide con su búsqueda",
+  "Legal & Privacy": "Legal y Privacidad",
+  "Manage platform policies and conditions": "Gestionar políticas e condiciones da plataforma",
+  "Privacy Policy": "Política de Privacidad",
+  "Terms of Use": "Términos de Uso",
+  "Enter the privacy policy content here...": "Ingrese el contenido de la política de privacidad aquí...",
+  "Enter the terms of use content here...": "Ingrese el contenido de los términos de uso aquí...",
+  "Save Legal Content": "Guardar Contenido Legale",
+  "Last updated: 2026": "Última actualización: 2026",
+  "Our commitment to you": "Nuestro compromiso con usted",
+  "Content not available": "Contenido no disponible",
+  "The administration team is currently updating this document.": "El equipo de administración está actualizando este documento.",
+  "Close window": "Cerrar ventana"
 }
