--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -4,6 +4,11 @@
   "Master administrators have access to all reports automatically.": "Administradores Mestres têm acesso a todos os relatórios automaticamente.",
   "name@company.com": "nome@empresa.com",
   "John Doe": "João da Silva",
+  "Phone": "Telefone",
+  "Company Name": "Nome da Empresa",
+  "Company": "Empresa",
+  "+55 11 99999-9999": "+55 11 99999-9999",
+  "Company Ltd.": "Empresa Ltda.",
   "Edit User": "Editar Usuário",
   "Update user details and permissions.": "Atualizar detalhes e permissões do usuário.",
   "Criado em": "Criado em",
@@ -29,9 +34,24 @@
   "Assign this user to a specific tenant organization.": "Atribuir este usuário a uma organização específica.",
   "Grants full administrative access to all system settings.": "Concede acesso administrativo total a todas as configurações do sistema.",
   "Cancel": "Cancelar",
+  "Confirm": "Confirmar",
+  "Clear": "Limpar",
+  "Delete": "Excluir",
   "Users": "Usuários",
   "Settings": "Configurações",
   "Dashboard": "Dashboard",
+  "Legal & Privacy": "Jurídico e Privacidade",
+  "Manage platform policies and conditions": "Gerencie as políticas e condições da plataforma",
+  "Privacy Policy": "Política de Privacidade",
+  "Terms of Use": "Termos de Uso",
+  "Enter the privacy policy content here...": "Insira o conteúdo da política de privacidade aqui...",
+  "Enter the terms of use content here...": "Insira o conteúdo dos termos de uso aqui...",
+  "Save Legal Content": "Salvar Conteúdo Jurídico",
+  "Last updated: 2026": "Última atualização: 2026",
+  "Our commitment to you": "Nosso compromisso com você",
+  "Content not available": "Conteúdo não disponível",
+  "The administration team is currently updating this document.": "A equipe de administração está atualizando este documento.",
+  "Close window": "Fechar janela",
   "Users Management": "Gestão de Usuários",
   "Manage users and their permissions.": "Gerenciar usuários e suas permissões.",
   "Name": "Nome",
@@ -69,7 +89,6 @@
   "Create a new password for your account.": "Crie uma nova senha para sua conta.",
   "New Password": "Nova Senha",
   "Confirm New Password": "Confirmar Nova Senha",
-  "Confirm": "Confirmar",
   "This is a secure area. Please confirm your password.": "Esta é uma área segura. Por favor, confirme sua senha.",
   "Verify email": "Verificar email",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you?": "Obrigado por se cadastrar! Antes de começar, por favor verifique seu endereço de email clicando no link que acabamos de enviar.",
@@ -106,6 +125,9 @@
   "User created successfully.": "Usuário criado com sucesso.",
   "User updated successfully.": "Usuário atualizado com sucesso.",
   "User deleted successfully.": "Usuário excluído com sucesso.",
+  "Clear Activities": "Limpar Atividades",
+  "Are you sure you want to clear all user activities? This will reset all engagement data for all users.": "Tem certeza que deseja limpar todas as atividades dos usuários? Isso irá resetar todos os dados de engajamento.",
+  "Activities cleared successfully.": "Atividades limpas com sucesso.",
   "Security & Access": "Segurança e Acesso",
   "Global user registration settings.": "Configurações globais de registro de usuários.",
   "Require Manual Activation": "Requerer Ativação Manual",
@@ -126,7 +148,6 @@
   "No users found": "Nenhum usuário encontrado",
   "Try adjusting your search or clearing the filters.": "Tente ajustar sua busca ou limpar os filtros.",
   "Are you sure you want to delete this user? This action cannot be undone.": "Tem certeza que deseja excluir este usuário? Esta ação não poderá ser desfeita.",
-  "Delete": "Excluir",
   "Search by name or email...": "Buscar por nome ou email...",
   "Permission Settings": "Configuração de Permissões",
   "Activate All Listed": "Ativar Todos os Listados",
@@ -143,6 +164,7 @@
   "Basic Info": "Informações Básicas",
   "Profile updated successfully.": "Perfil atualizado com sucesso.",
   "Password updated successfully.": "Senha atualizada com sucesso.",
+  "Password updated successfully. Please log in again.": "Senha atualizada com sucesso. Por favor, faça login novamente.",
   "User status updated.": "Status do usuário atualizado.",
   "Users updated successfully.": "Usuários atualizados com sucesso.",
   "You cannot remove your own master status or deactivate yourself.": "Você não pode remover seu próprio status de mestre ou desativar a si mesmo.",
