--- a/lang/pt_PT.json
+++ b/lang/pt_PT.json
@@ -4,8 +4,13 @@
   "Master administrators have access to all reports automatically.": "Administradores Mestres têm acesso a todos os relatórios automaticamente.",
   "name@company.com": "nome@empresa.com",
   "John Doe": "João da Silva",
+  "Phone": "Telefone",
+  "Company Name": "Nome da Empresa",
+  "Company": "Empresa",
+  "+55 11 99999-9999": "+351 912 345 678",
+  "Company Ltd.": "Empresa Lda.",
   "Edit User": "Editar Usuário",
-  "Update user details and permissions.": "Atualizar detalhes e permissões do usuário.",
+  "Update user details and permissions.": "Atualizar detalhes e permissões do utilizador.",
   "Criado em": "Criado em",
   "Atualizado em": "Atualizado em",
   "Status": "Estado",
@@ -29,10 +34,13 @@
   "Assign this user to a specific tenant organization.": "Atribuir este utilizador a uma organização específica.",
   "Grants full administrative access to all system settings.": "Concede acesso administrativo total a todas as configurações do sistema.",
   "Cancel": "Cancelar",
+  "Confirm": "Confirmar",
+  "Clear": "Limpar",
+  "Delete": "Apagar",
   "Users": "Utilizadores",
   "Settings": "Definições",
   "Dashboard": "Dashboard",
-  "Users Management": "Gestão de Usuários",
+  "Users Management": "Gestão de Utilizadores",
   "Manage users and their permissions.": "Gerir utilizadores e as suas permissões.",
   "Name": "Nome",
   "Email": "Email",
@@ -69,7 +77,6 @@
   "Create a new password for your account.": "Crie uma nova palavra-passe para a sua conta.",
   "New Password": "Nova Palavra-passe",
   "Confirm New Password": "Confirmar Nova Palavra-passe",
-  "Confirm": "Confirmar",
   "This is a secure area. Please confirm your password.": "Esta é uma área segura. Por favor, confirme a sua palavra-passe.",
   "Verify email": "Verificar email",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you?": "Obrigado por se registar! Antes de começar, poderia verificar o seu endereço de email clicando no link que acabámos de enviar?",
@@ -106,6 +113,9 @@
   "User created successfully.": "Utilizador criado com sucesso.",
   "User updated successfully.": "Utilizador atualizado com sucesso.",
   "User deleted successfully.": "Utilizador apagado com sucesso.",
+  "Clear Activities": "Limpar Atividades",
+  "Are you sure you want to clear all user activities? This will reset all engagement data for all users.": "Tem a certeza que deseja limpar todas as atividades dos utilizadores? Isto irá repor todos os dados de compromisso.",
+  "Activities cleared successfully.": "Atividades limpas com sucesso.",
   "Security & Access": "Segurança e Acessos",
   "Global user registration settings.": "Definições globais de registo de utilizadores.",
   "Require Manual Activation": "Requerer Ativação Manual",
@@ -126,7 +136,6 @@
   "No users found": "Nenhum utilizador encontrado",
   "Try adjusting your search or clearing the filters.": "Tente ajustar a sua pesquisa ou limpar os filtros.",
   "Are you sure you want to delete this user? This action cannot be undone.": "Tem a certeza que deseja apagar este utilizador? Esta ação não pode ser revertida.",
-  "Delete": "Apagar",
   "Search by name or email...": "Procurar por nome ou email...",
   "Permission Settings": "Definições de Permissões",
   "Activate All Listed": "Ativar Todos os Listados",
@@ -143,6 +152,7 @@
   "Basic Info": "Informações Básicas",
   "Profile updated successfully.": "Perfil atualizado com sucesso.",
   "Password updated successfully.": "Palavra-passe atualizada com sucesso.",
+  "Password updated successfully. Please log in again.": "Palavra-passe atualizada com sucesso. Por favor, faça login novamente.",
   "User status updated.": "Estado do utilizador atualizado.",
   "Users updated successfully.": "Utilizadores atualizados com sucesso.",
   "You cannot remove your own master status or deactivate yourself.": "Não pode remover o seu próprio status de mestre nem desativar-se a si mesmo.",
@@ -170,5 +180,17 @@
   "Update Time": "Hora da Atualização",
   "Access Dashboard": "Aceder ao Dashboard",
   "Deselect All": "Desmarcar Todos",
-  "No users matched your search": "Nenhum utilizador corresponde à sua pesquisa"
+  "No users matched your search": "Nenhum utilizador corresponde à sua pesquisa",
+  "Legal & Privacy": "Jurídico e Privacidade",
+  "Manage platform policies and conditions": "Gerir as políticas e condições da plataforma",
+  "Privacy Policy": "Política de Privacidade",
+  "Terms of Use": "Termos de Utilização",
+  "Enter the privacy policy content here...": "Insira o conteúdo da política de privacidade aqui...",
+  "Enter the terms of use content here...": "Insira o conteúdo dos termos de utilização aqui...",
+  "Save Legal Content": "Guardar Conteúdo Jurídico",
+  "Last updated: 2026": "Última atualização: 2026",
+  "Our commitment to you": "O nosso compromisso consigo",
+  "Content not available": "Conteúdo não disponível",
+  "The administration team is currently updating this document.": "A equipa de administração está a atualizar este documento.",
+  "Close window": "Fechar janela"
 }
